<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_back"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/appNameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/black_700"
                    android:textSize="24sp"
                    android:layout_gravity="center|top"/>

                <TextView
                    android:id="@+id/todayTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/heading_2"
                    android:textColor="@color/black_700"
                    android:textSize="16sp"
                    android:layout_gravity="center|top"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/profilePictIb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_shape"
                android:scaleType="centerCrop"
                android:layout_gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/dateHeaderTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/black_700"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/countTaskTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/pending"
                    android:textColor="@color/grey_500"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/calendarBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_stroke"
                android:backgroundTint="@color/grey_200"
                android:src="@drawable/ic_calendar"
                android:layout_gravity="right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">
            <ImageView
                android:id="@+id/iv_calendar_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Previous"
                android:src="@drawable/ic_back"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/dateMonthTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:textSize="18sp"
                android:textColor="@color/black_700"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/iv_calendar_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Next"
                android:src="@drawable/ic_back"
                android:rotation="180"/>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timeRv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"/>
    </LinearLayout>
</layout>